fix mobile menu on iphone

--- a/src/assets/styles/components/_app-header.scss
+++ b/src/assets/styles/components/_app-header.scss
@@ -60,11 +60,6 @@
                     text-transform: uppercase;
                     font-size: rem(24px);
                 }
-                @media (hover: hover) {
-                    a:hover {
-                        background-color: lighten($clr1, 38%);
-                    }
-                }
             }
         }
     }
